# roa

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: network_CPU.pt
docs/: example.ipynb  example_RoA_Colab.ipynb
scripts/: FCI_download.py  MSG_download.py  inference.py  inference_aws.py  upload.py
src/roa/: __init__.py  data.py  stats.py  tiler.py  utils.py
